debut recuit + presque fini spanning tree

--- a/Recuit_Simule.ipynb
+++ b/Recuit_Simule.ipynb
@@ -1,12 +1,192 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "fab72923",
+   "metadata": {},
+   "source": [
+    "##Generation de graph"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "429c8e1a",
+   "id": "040d2ae6",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "%matplotlib inline\n",
+    "import random\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "def pointGeneration(nb):\n",
+    "    n = nb\n",
+    "    scale = 50*n\n",
+    "    maxJoint = 1\n",
+    "\n",
+    "    depot = (scale/2,scale/2)\n",
+    "    pointList = [depot]\n",
+    "    \n",
+    "    for i in range(n):\n",
+    "        pointList += (i,)\n",
+    "        pointList[i+1] = (random.randrange(0,scale),random.randrange(0,scale))\n",
+    "        \n",
+    "    return pointList\n",
+    "#------------------------------------------------------------------------------------\n",
+    "def plotPoints(pointList):\n",
+    "    plt.plot(pointList[0][0],pointList[0][1],\"ro\", markersize=15)\n",
+    "    plt.annotate(\"dépot\", (pointList[0][0]+3, pointList[0][1]+3), fontsize=10)\n",
+    "    for i in range(len(pointList)):\n",
+    "        if (i!= 0):\n",
+    "            plt.plot(pointList[i][0], pointList[i][1],\"bo\")\n",
+    "            plt.annotate(i, (pointList[i][0]+3, pointList[i][1]+3), fontsize=12)\n",
+    "#------------------------------------------------------------------------------------\n",
+    "def randomPackages(nb, nbPointsMax):\n",
+    "    package = random.sample(range(1, nbPointsMax), nb)\n",
+    "    for i in range(len(package)):\n",
+    "        plt.plot(pointList[package[i]][0], pointList[package[i]][1],\"go\", markersize=10)\n",
+    "    return package\n",
+    "\n",
+    "        \n",
+    "#------------------------------------------------------------------------------------\n",
+    "def makematrix(liste, linksLimit):\n",
+    "    matrix = np.zeros((len(liste),len(liste)))\n",
+    "    \n",
+    "    for i in range(len(matrix)):\n",
+    "        matrix[i][(i+1)%(len(matrix))] = 1\n",
+    "        matrix[(i+1)%(len(matrix))][i] = 1\n",
+    "    \n",
+    "    for i in range(len(matrix)):\n",
+    "        \n",
+    "        if i < len(matrix):\n",
+    "        \n",
+    "            nbchoisi = 0\n",
+    "            while(sum(matrix[i])<linksLimit and matrix[:, i].sum() < linksLimit):\n",
+    "                nbchoisi = np.random.randint(i,len(matrix))\n",
+    "                \n",
+    "                if (matrix[:, nbchoisi].sum() < linksLimit and sum(matrix[nbchoisi])<linksLimit):\n",
+    "                    matrix[i][nbchoisi] = 1\n",
+    "                    matrix[nbchoisi][i] = 1\n",
+    "\n",
+    "            \n",
+    "                    \n",
+    "    for i in range(len(matrix)):\n",
+    "        matrix[i][i] = 0\n",
+    "    return matrix\n",
+    "\n",
+    "            \n",
+    "def TraceLinks(matrix):\n",
+    "    # Pour chaque points, on trace une ligne avec chaque voisins\n",
+    "    for i in range(len(matrix)):\n",
+    "        for j in range(len(matrix)):\n",
+    "            if(i>j):\n",
+    "                if matrix[i][j] > 0:\n",
+    "                    x = (pointList[i][0], pointList[j][0])\n",
+    "                    y = (pointList[i][1], pointList[j][1])\n",
+    "                    plt.plot(x, y,\"b\", linestyle=\"solid\")\n",
+    "\n",
+    "                    \n",
+    "#------------------------------------------------------------------------------------\n",
+    "def ponderation(pointList, matrix):\n",
+    "    for i in range(len(matrix)):\n",
+    "        for j in range(len(matrix)):\n",
+    "            if matrix[i][j] == 1:\n",
+    "                poids = np.sqrt((pointList[i][0]-pointList[j][0])**2+(pointList[i][1]-pointList[j][1])**2)\n",
+    "                matrix[i][j] = round(poids)\n",
+    "                \n",
+    "                \n",
+    "#------------------------------------------------------------------------------------------------------------------------------------\n",
+    "nbPoints = 20\n",
+    "nbvoisins = 3\n",
+    "\n",
+    "pointList = pointGeneration(nbPoints)\n",
+    "print(\"Liste des points :\", pointList)\n",
+    "plotPoints(pointList)\n",
+    "randomPackages(3, nbPoints)\n",
+    "matrix = makematrix(pointList, nbvoisins)\n",
+    "print(\"Matrice d'adjacence \\n\", matrix)\n",
+    "ponderation (pointList,matrix)\n",
+    "print(\"Matrice d'adjacence pondérée \\n\", matrix)\n",
+    "TraceLinks(matrix)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f4e34730",
+   "metadata": {},
+   "source": [
+    "## generation de solution aléatoire"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b0f66db0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generateSolution(matrix,package):\n",
+    "\n",
+    "    packageLeft = package.copy()\n",
+    "    solution = [0]\n",
+    "\n",
+    "    #print(\"Package : \", packageLeft)\n",
+    "\n",
+    "    while(packageLeft):\n",
+    "        randomNext = np.random.randint(0,len(matrix))\n",
+    "        while( matrix[solution[-1]][randomNext] == 0 ):\n",
+    "            randomNext = np.random.randint(0,len(matrix))\n",
+    "        solution.append(randomNext)\n",
+    "        if(randomNext in packageLeft):\n",
+    "            packageLeft.remove(randomNext)\n",
+    "    #print(\"Solution : \",solution)\n",
+    "\n",
+    "    return solution\n",
+    "\n",
+    "\n",
+    "def solutionLength(solution):\n",
+    "\n",
+    "    totalLength = 0\n",
+    "    for i in range(0,len(solution)-1):\n",
+    "        totalLength += matrix[solution[i]][solution[i+1]]\n",
+    "\n",
+    "    return totalLength\n",
+    "\n",
+    "def generatePopulation(matrix,package):\n",
+    "\n",
+    "    population = []\n",
+    "    for i in range(100):\n",
+    "\n",
+    "        population.append(generateSolution(matrix,package))\n",
+    "        #print(population[i])\n",
+    "        #print(solutionLength(population[i]))\n",
+    "\n",
+    "    return population"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "28b9314f",
+   "metadata": {},
+   "source": [
+    "## Recuit simulé"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2e071bb7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def GetAllSolutionsVoisines(solution,matrix):\n",
+    "    solutions_voisines = []\n",
+    "    for p in solution:\n",
+    "        solvoisine = solution.copy()\n",
+    "            \n",
+    "            "
+   ]
   }
  ],
  "metadata": {
