--- a/Algo_Génetique fini.ipynb
+++ b/Algo_Génetique fini.ipynb
@@ -75,8 +75,7 @@
     "                    matrix[nbchoisi][i] = 1\n",
     "                   \n",
     "    for i in range(len(matrix)):\n",
-    "        matrix[i][i] = 0\n",
-    "        \n",
+    "        matrix[i][i] = 0  \n",
     "    return matrix\n",
     "\n",
     "#------------------------------------------------------------------------------------------------------------------------\n",
@@ -212,6 +211,7 @@
     "\n",
     "    initPopulation = generatePopulation(matrix, package, populationSize)\n",
     "    select = selection(initPopulation)\n",
+    "    lastMin = None\n",
     "    \n",
     "    for i in range(nbIteration):\n",
     "        \n",
@@ -221,6 +221,11 @@
     "        \n",
     "        for j in range(len(muta)):\n",
     "            length.append(solutionLength(muta[j]))\n",
+    "            \n",
+    "            \n",
+    "        plt.plot([i,i+1], [lastMin,min(length)],\"b\", linestyle=\"solid\",markersize=10)\n",
+    "        lastMin = min(length)\n",
+    "        \n",
     "            \n",
     "        print(i, \":\",muta[length.index(min(length))])\n",
     "        #print(i)\n",
@@ -287,24 +292,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nbPoints = 150\n",
-    "nbVoisins = 3\n",
-    "nbPackage = 7\n",
+    "nbPoints = 30\n",
+    "nbNeighbor = 3\n",
+    "nbPackage = 4\n",
     "scaleMultiplier = 10\n",
     "\n",
-    "nbIteration = 10\n",
-    "populationSize = 40\n",
+    "nbIteration = 200\n",
+    "populationSize = 50\n",
     "\n",
     "\n",
     "\n",
     "pointList = pointGeneration(nbPoints,scaleMultiplier)\n",
     "plotPoints(pointList)\n",
-    "#print(\"Liste des points :\", pointList)\n",
+    "print(\"Liste des points :\", pointList)\n",
     "\n",
     "package = randomPackages(nbPackage, nbPoints)\n",
     "#print(\"Liste des paquets :\", package)\n",
     "\n",
-    "matrix = makematrix(pointList, nbVoisins)\n",
+    "matrix = makematrix(pointList, nbNeighbor)\n",
     "print(\"Matrice d'adjacence \\n\", matrix)\n",
     "\n",
     "ponderation (pointList,matrix)\n",
@@ -316,7 +321,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "109faa49",
+   "id": "022f0488",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "037ea5cc",
+   "id": "a564316e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,7 +345,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45bbc699",
+   "id": "26046c2f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0af32022",
+   "id": "fb8cfe84",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +370,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf202479",
+   "id": "10c78881",
    "metadata": {},
    "outputs": [],
    "source": []
