--- a/Algo_Génetique fini.ipynb
+++ b/Algo_Génetique fini.ipynb
@@ -1,6 +1,81 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "2c250182",
+   "metadata": {},
+   "source": [
+    "# Algorithme génétique"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2a1e6b9e",
+   "metadata": {},
+   "source": [
+    "Ce programme est composé de plusieurs blocs segmentant l'éxécution du programme.\n",
+    "\n",
+    "Le premier bloc est dédié à la définition des fonctions de l'algorithme qui seront par la suite appellées dans le programme. Ce bloc n'a besoin d'être éxécuté qu'une seule fois. Ces fonctions sont divisés en deux ensemble. \n",
+    "\n",
+    "\n",
+    "La première partie comporte les fonctions nécessaires à la création  de notre situation d'origine :\n",
+    "\n",
+    "    1) Création de n points au coordonées aléatoires représentant nos villes, ainsi que notre entrepot situé au mileu de la        plage de nombre aléatoire\n",
+    "    \n",
+    "    2) Affichage des points sur un graphe \n",
+    "    \n",
+    "    3) Sélection parmis les villes de n points de livraison (points verts)\n",
+    "    \n",
+    "    4) Création d'une matrice d'adjacence aléatoire limitée par un nombre de voisin maximum pour chaque point. La matrice          est générée de tel manière à créer un seul graphe connexe. Grâce à cette matrice, nous obtenons une représentation          réaliste d'une carte routière. Chaque ville est connectée à quelques autres seulement et non à toute les autres            (notre graphe n'est pas complet). Ce choix rendra l'application de l'algorithme génétique bien plus complexe à              mettre en place au profit d'un respect du context initial bien plus proche de la réalité et nécessitera                    d'importantes modifications dans la méthode le l'algorithme. On peut donc considérer ce choix comme l'application          d'une contrainte supplémentaire autre que celles obligatoires.\n",
+    "\n",
+    "    5) Traçage des routes entre les points selon la matrice.\n",
+    "    \n",
+    "    6) Applique une pondération à la matrice en fonction de la distance entre les points voisins, calculée à partir des            coordonées de chaque point.\n",
+    "<br>\n",
+    "    \n",
+    "    \n",
+    "La deuxième partie est dédié à la définitions des fonctions nécessaire à l'algorithme génétique.\n",
+    "\n",
+    "    1) Génération d'une solution valide passant par tous les points de livraisons et retournant à l'entrepot.\n",
+    "    \n",
+    "    2) Calcul de la longeur d'une solution\n",
+    "    \n",
+    "    3) Génération d'une population de n solutions \n",
+    "    \n",
+    "    4) Selection par tournoi d'une population. Les solutions sont regroupée par paire et on garde pour chaque paire la            meilleure des deux solutions. Pour n solutions en entrée, on retourne n/2 solutions.\n",
+    "    \n",
+    "    5) Mutation des solutions issues de la sélection. On retourne les solutions en entrée ainsi qu'une copie mutée de              chaque solution. La mutation ne mute pas simplement un gène aléatoire (un point dans la solution) mais nécessite de        regénérer toute la suite de la solution à partir de ce point car simplement substituer un point mènerai à une              incohérence car le nouveau point ne serai pas forcément voisin avec le point le précédant ainsi que le point                suivant. C'est pour cette raison qu'il n'existe pas d'étape de croisement dans cet algorithme. La substitution de          points entre deux solutions est impossible.\n",
+    "\n",
+    "    6) Éxécution de la fonction de création de population puis de sélection et enfin de mutation. On sélectionne et mute n        fois en utilisant en entrée de la sélection de rang i+1 les solutions générées par la mutation de rang i. Pour              chaque itération, on retourne la solution la plus courte de la population.\n",
+    "\n",
+    "    7) Trace la solution sur un graphe.\n",
+    "\n",
+    "    8) Les trois dernière fonctions permettent d'identifier les allers et retours inutiles (ne passant pas par un point de        livraison) d'une solution et de les supprimer pour donner une solution encore plus pertinente. \n",
+    "\n",
+    "<br>\n",
+    "<br>\n",
+    "Le deuxième bloc nous permet d'initialiser les valeur paramètres de notre situation, comme le nombre de points, le nombre de voisins maximum, le nombre de colis ou bien le nombre d'itération et la population de l'algorithme génétique. Il va également lancer les fonctions de génération de la situation. Suite à son éxécution, le graphe de notre situation est retourné.\n",
+    "\n",
+    "Le troisième bloc va lancer l'algorithme génétique à la recherche d'une solution. Nous retrouvons pour chaque itération la solution la plus courte ainsi que sa longeur. On obtient à la fin des itération, un graphe des longeurs des solutions en fonctions du nombre d'itération ainsi que le temps d'éxécution de l'algorithme.\n",
+    "\n",
+    "Le quatrième bloc va tracer la solution trouvée.\n",
+    "\n",
+    "Le cinquième bloc va chercher toute optimisation en supprimant les allers-retours inutiles et tracer le graphe de la solution finale.\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "Note: Les distances sont en kilomètres, on a simulé des points a grande distances, il peut donc y avoir deux points avec 700Km d'écart, nos temps de routes seront donc importants. De plus, une bibliographie sera disponible à la fin de ce document afin de mettre à disposition les sources sur lesquelles s'appliquent "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "af376b6d",
+   "metadata": {},
+   "source": [
+    "# Définition des fonctions "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "629ddc50",
@@ -286,36 +361,52 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "89e85fc2",
+   "metadata": {},
+   "source": [
+    "# Initialisation des paramètres et création de la situation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "7bbfdbf5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "nbPoints = 30\n",
+    "nbPoints = 20\n",
     "nbNeighbor = 3\n",
     "nbPackage = 4\n",
     "scaleMultiplier = 10\n",
     "\n",
-    "nbIteration = 200\n",
+    "nbIteration = 10\n",
     "populationSize = 50\n",
     "\n",
     "\n",
     "\n",
     "pointList = pointGeneration(nbPoints,scaleMultiplier)\n",
     "plotPoints(pointList)\n",
-    "print(\"Liste des points :\", pointList)\n",
+    "#print(\"Liste des points :\", pointList)\n",
     "\n",
     "package = randomPackages(nbPackage, nbPoints)\n",
     "#print(\"Liste des paquets :\", package)\n",
     "\n",
     "matrix = makematrix(pointList, nbNeighbor)\n",
-    "print(\"Matrice d'adjacence \\n\", matrix)\n",
+    "#print(\"Matrice d'adjacence \\n\", matrix)\n",
     "\n",
     "ponderation (pointList,matrix)\n",
     "#print(\"Matrice d'adjacence pondérée \\n\", matrix)\n",
     "\n",
     "TraceLinks(matrix)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a7412a9f",
+   "metadata": {},
+   "source": [
+    "# Lancement de l'algorithme génétique"
    ]
   },
   {
@@ -326,9 +417,15 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "s = iterate(nbIteration,matrix,package, populationSize)\n",
-    "print(s)\n",
-    "print(solutionLength(s))"
+    "s = iterate(nbIteration,matrix,package, populationSize)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d0cbf070",
+   "metadata": {},
+   "source": [
+    "# Affichage de la solution générée"
    ]
   },
   {
@@ -338,8 +435,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "traceSolution(s,package,pointList)\n",
-    "print(package)"
+    "traceSolution(s,package,pointList)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "df49dcc6",
+   "metadata": {},
+   "source": [
+    "# Optimisation de la solution générée"
    ]
   },
   {
@@ -349,28 +453,53 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(s)\n",
-    "print(solutionLength(s))\n",
+    "print(\"Solution générée :\",s)\n",
+    "print(\"Longueur :\",solutionLength(s))\n",
     "\n",
-    "print(remove_useless_subpaths(s, package))\n",
-    "print(solutionLength(remove_useless_subpaths(s, package)))"
+    "print(\"\\nSolution optimisée :\",remove_useless_subpaths(s, package))\n",
+    "print(\"Longueur :\",solutionLength(remove_useless_subpaths(s, package)))\n",
+    "\n",
+    "traceSolution(remove_useless_subpaths(s, package),package, pointList)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fb8cfe84",
+   "cell_type": "markdown",
+   "id": "b7fd941d",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "traceSolution(remove_useless_subpaths(s, package),package, pointList)\n",
-    "print(package)"
+    "# Bibliographie"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4e213179",
+   "metadata": {},
+   "source": [
+    "**Choice of best possible metaheuristic algorithm for the travelling salesman problem with limited computational time: quality, uncertainty and speed (2013)**\n",
+    "<br>\n",
+    "Auteurs : Marek Antosiewicz, Grzegorz Koloch, Bogumił Kamiński \n",
+    "<br>\n",
+    "https://www.researchgate.net/profile/Bogumil-Kaminski-2/publication/312889331_Choice_of_best_possible_metaheuristic_algorithm_for_the_travelling_salesman_problem_with_limited_computational_time_Quality_uncertainty_and_speed/links/5fc22195a6fdcc6cc677a46a/Choice-of-best-possible-metaheuristic-algorithm-for-the-travelling-salesman-problem-with-limited-computational-time-Quality-uncertainty-and-speed.pdf\n",
+    "<br>\n",
+    "<br>\n",
+    "**An Improved Genetic Algorithm with Initial Population Strategy for Symmetric TSP (2015)**\n",
+    "<br>\n",
+    "Auteur : Yong Deng, Yang Liu, et Deyun Zhou1\n",
+    "<br>\n",
+    "https://www.hindawi.com/journals/mpe/2015/212794/\n",
+    "<br>\n",
+    "<br>\n",
+    "**Genetic Algorithm Performance with Different Selection Strategies in Solving TSP (2011)**\n",
+    "<br>\n",
+    "Auteurs : Noraini Mohd Razali, John Geraghty\n",
+    "<br>\n",
+    "http://www.iaeng.org/publication/WCE2011/WCE2011_pp1134-1139.pdf\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10c78881",
+   "id": "3e56a626",
    "metadata": {},
    "outputs": [],
    "source": []
